Fixed some spacing issues

--- a/src/components/layout/nav/style.scss
+++ b/src/components/layout/nav/style.scss
@@ -63,7 +63,7 @@
           font-size: 9px;
           letter-spacing: 2px;
           position: absolute;
-          bottom: 0;
+          bottom: 25px;
           display: block;
           width: 100%;
           text-align: center;
